# aca_health

./: .gitignore  .loaded_filenames  Makefile  README.md  dbt_test.txt  graph.gpickle  graph_summary.json  index.html  main.py  new_project_steps.md  partial_parse.msgpack  pyproject.toml  requirements.txt  roadmap.md  tree.txt
.github/workflows/: cicd_docs.yml  dbt-docs.yml  dbt_docs_pages.yml  deploy-dbt-docs.yml  docs.yml  test.yml
data/seeds/: claims_202508092024.csv  claims_202509062018.csv  claims_202509262135.csv  enrollments_202508092029.csv  enrollments_202509062018.csv  enrollments_202509192222.csv  members_202508092024.csv  members_202509062018.csv  members_202509192222.csv  members_202509291919.csv  plans_202509062018.csv  plans_202509192222.csv  providers_202509062018.csv  providers_202509192222.csv
docs/: README.md
docs/adr/: 0001-data-warehouse-dim-fact-design.md
docs/reminders/: new_project_steps.md  scd.md  scd_applies.md  scd_applies_dbt.md
etl/load/: staging_loader.py
infrastructure/database/: README.md
infrastructure/docker/: docker-compose.yml  postgres.Dockerfile
scripts/: generate_ebola_claims.py  generate_radiation_claims.py  generate_seed_data.py  scenarios.json  staging_loader.py
transform/: README.md  dbt_project.yml  dbt_test.txt  dbt_test_results_success.txt  github_actions_docs.py  make_static_docs.py  make_static_docs_enhanced.py  packages.yml
transform/profiles/: .user.yml  profiles.yml
transform/seeds/: claims.csv  enrollments.csv  members.csv  plans.csv  properties.yml  providers.csv
transform/snapshots/: README.md  (+4 more)
(+65 files in other folders)
