[project]
name = "star"
version = "0.1.0"
description = "star schema exploration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
