[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aca_health"
version = "0.1.0"
description = "aca_health schema exploration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary]>=3.2.0",
    "faker>=25.2.0",
    "ruff>=0.5.5",
    "black>=24.4.2",
    "sqlfluff>=3.0.7",
    "dbt-postgres>=1.8.2"
]

[tool.setuptools]
py-modules = []

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
